# discord-bot

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
.github/workflows/: ci.yml  fly-deploy.yml
src/: main.rs
